# OnStreamLLM

./: .gitignore  LICENSE  README.md  README_FIELD_TEST.md  Readme.txt  build_portable.ps1  download_sources.json  info.txt  live_translate.spec  portable_main.py  pyproject.toml  run.bat  run.ps1  runtime_manifest.example.json  setup.ps1
src/live_translate/: __init__.py  audio.py  compute.py  config.py  engines.py  event_bus.py  gpu_driver.py  i18n.py  main.py  model_store.py  models.py  ocr.py  runtime_bootstrap.py  runtime_dependencies.py  runtime_install_queue.py  runtime_installer.py  server.py  ui.py
tests/: test_app_icon.py  test_audio.py  test_caption_style_ui.py  test_compute.py  test_gpu_driver.py  test_inline_translator.py  test_language_settings.py  test_lightweight_engines.py  test_model_presets.py  test_model_store.py  test_models.py  test_ocr.py  test_popup_overlay.py  test_qwen_compat.py  test_remote_protocol.py  test_runtime_bootstrap.py  test_runtime_install_queue.py  test_runtime_installer.py  test_status_history.py
